--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,7 +8,7 @@
 @import './ui/_buttons';
 @import './ui/icons';
 
-@import './layout/grid';
+@import './layout/container';
 @import './layout/content';
 
 @import './partials/line';
