--- a/src/scss/partials/landing/_hero-sub.scss
+++ b/src/scss/partials/landing/_hero-sub.scss
@@ -162,4 +162,14 @@
       }
     }
   }
+
+  @include rwd(xxs) {
+    &__container {
+      @include flex(column, center, center);
+    }
+
+    &__services {
+      margin: 50px 0;
+    }
+  }
 }
