--- a/src/scss/partials/landing/_services-section.scss
+++ b/src/scss/partials/landing/_services-section.scss
@@ -188,4 +188,15 @@
     }
   }
 
+  @include rwd(xxs) {
+    padding: 0;
+    
+    &__container {
+      @include flex(column, center, center);
+    }
+
+    &__wrapper {
+      margin-top: 0;
+    }
+  }
 }
