--- a/src/scss/pages/_specializations.scss
+++ b/src/scss/pages/_specializations.scss
@@ -158,4 +158,22 @@
       }
     }
   }
+
+  @include rwd(xxs) {
+    &__description {
+      width: 80%;
+    }
+
+    &__single {
+      width: 100%;
+
+      & + & {
+        margin: 30px 0 0;
+      }
+
+      &-name {
+        font-size: $font-size-base;
+      }
+    }
+  }
 }
