--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -10,6 +10,7 @@
   @include flex(row, center, center);
 
   &__wrapper {
+    position: relative;
     @include flex(row, space-between, center);
   }
 
@@ -115,6 +116,17 @@
         color: $color-highlight;
       }
     }
+
+    &-toggle {
+      display: none;
+      color: $color-foreground;
+      transition: transform $tr;
+
+      &--active {
+        color: $color-highlight;
+        transform: rotate3d(0, 0, 1, 90deg);
+      }
+    }
   }
 
   &__logo, &__url {
@@ -143,6 +155,7 @@
       &-inner {
         @include flex(row, space-around, center);
       }
+
       &-item {
         padding: 12px;
 
@@ -179,6 +192,79 @@
     &__navigation {
       &-item {
         font-size: 12px;
+      }
+    }
+  }
+
+  @include rwd(xs) {
+    &__wrapper {
+      justify-content: center;
+    }
+
+    &__navigation {
+      position: absolute;
+      right: 0;
+
+      &-inner {
+        position: fixed;
+        top: 88px;
+        right: 0;
+        width: percentage(1/3);
+        height: auto;
+        opacity: 0;
+        padding: 0 50px 50px;
+        flex-direction: column;
+        background-color: #fff;
+        transition: transform $tr, opacity $tr;
+        transform: translate3d(100%, 0, 0);
+
+        @supports(backdrop-filter: blur(5px)) {
+          background-color: transparent;
+          @include gradient(vertical, #fff, rgba(#fff, 0.6));
+          backdrop-filter: blur(5px);
+        }
+      }
+
+      &-item {
+        padding: 0;
+        font-size: $font-size-l;
+        font-weight: 400;
+
+        & a {
+          padding: 25px;
+        }
+
+        &--contact {
+          width: 100%;
+          margin: 0;
+
+          & a {
+            width: unset;
+          }
+        }
+      }
+
+      &-toggle {
+        @include flex(row, space-between, center);
+      }
+    }
+
+    &__logo {
+      width: 330px;
+      height: auto;
+    }
+  }
+
+  @include rwd(xxs) {
+    &__navigation {
+      &-inner {
+        width: 100%;
+        transform: translate3d(0, -120%, 0);
+
+        &--visible {
+          transform: translate3d(0, 0, 0);
+          opacity: 1;
+        }
       }
     }
   }
