--- a/src/scss/partials/footer/_footer.scss
+++ b/src/scss/partials/footer/_footer.scss
@@ -180,4 +180,38 @@
       font-size: $font-size-s * 2/3;
     }
   }
+
+  @include rwd(xxs) {
+    &__container {
+      @include flex(column, center, center);
+    }
+
+    &__wrapper {
+      width: 100%;
+    }
+
+    &__contact {
+      @include flex(row, space-between, center, wrap);
+
+      &-form {
+        width: 100%;
+      }
+
+      &-item {
+        width: 50%;
+        padding: 0 10px;
+
+        &:last-of-type {
+          width: 100%;
+          border: none;
+        }
+      }
+    }
+
+    &__info {
+      height: auto;
+
+      @include flex(column, center, center);
+    }
+  }
 }
