--- a/src/scss/partials/landing/_team-section.scss
+++ b/src/scss/partials/landing/_team-section.scss
@@ -190,4 +190,37 @@
       height: 200px;
     }
   }
+
+  @include rwd(xxs) {
+    &__heading {
+      text-align: center;
+    }
+
+    &__description {
+      width: 100%;
+    }
+
+    &__members {
+      width: 100%;
+    }
+
+    &__single-member {
+      width: 160px;
+      height: 160px;
+
+      &-wrapper {
+        height: 45px;
+        margin: 0 0 -25px;
+      }
+
+      &-name {
+        font-size: $font-size-base;
+        line-height: 1.4;
+      }
+
+      &-position {
+        line-height: 1.4;
+      }
+    }
+  }
 }
