--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -119,6 +119,9 @@
 
     &-toggle {
       display: none;
+      background-color: transparent;
+      border: none;
+      outline: none;
       color: $color-foreground;
       transition: transform $tr;
 
@@ -223,6 +226,11 @@
           @include gradient(vertical, #fff, rgba(#fff, 0.6));
           backdrop-filter: blur(5px);
         }
+
+        &--visible {
+          transform: translate3d(0, 0, 0);
+          opacity: 1;
+        }
       }
 
       &-item {
@@ -264,6 +272,23 @@
         &--visible {
           transform: translate3d(0, 0, 0);
           opacity: 1;
+        }
+      }
+
+      &-toggle {
+        position: fixed;
+        top: 16px;
+        right: 0;
+        z-index: 15;
+      }
+
+      &-item{
+        &--contact {
+          a {
+            display: block;
+            padding: 10px;
+            text-align: center;
+          }
         }
       }
     }
