--- a/src/scss/partials/footer/_contact-form.scss
+++ b/src/scss/partials/footer/_contact-form.scss
@@ -21,6 +21,7 @@
     }
 
     & .wpcf7-form-control-wrap {
+      position: relative;
       display: block;
       z-index: 2;
       width: 100%;
@@ -51,7 +52,6 @@
   &__placeholder {
     position: absolute;
     top: 50%;
-    // padding-left: 15px;
     padding: 0 0 0 15px;
     transform: translateY(-50%);
     z-index: 1;
@@ -67,9 +67,13 @@
 
   &__submit {
     position: relative;
+    width: 172px;
+    height: 63px;
     margin: 20px 0 0;
     padding: 20px 77px 20px 40px;
     cursor: pointer;
+
+    @include flex(row, center, center);
 
     .icon {
       &--arrow {
@@ -80,6 +84,49 @@
         fill: currentColor;
       }
     }
+
+    &--submitted {
+      color: transparent;
+    }
+
+    &--failed {
+      border-color: #b01f1e !important;
+      color: #fff !important;
+      background-color: transparent !important;
+      padding: 10px !important;
+    }
+
+    &:disabled {
+      cursor: not-allowed;
+      padding: 20px;
+      border-color: #b0f566;
+
+      &:hover {
+        background-color: transparent;
+        color: #fff;
+      }
+    }
+  }
+
+  &__loader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .wpcf7-not-valid-tip {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    color: transparent;
+    box-shadow: 0 0 3px 3px $color-highlight;
+  }
+
+  .wpcf7-response-output, .ajax-loader { 
+    display: none !important;
   }
 
   @include rwd(xxs) {
