--- a/src/scss/pages/_team-member.scss
+++ b/src/scss/pages/_team-member.scss
@@ -1,8 +1,8 @@
 .team-member {
   margin: 0 0 -400px;
   padding: 0 0 400px;
-  background-size: cover;
   background-position: top -132px center;
+  background-size: cover;
   background-repeat: no-repeat;
 
   &__container {
@@ -38,8 +38,8 @@
 
   &__link {
     position: relative;
-    height: 53px;
     width: 217px;
+    height: 53px;
     margin: 85px 0 194px;
     padding: 20px 20px 20px 79px;
 
@@ -55,8 +55,8 @@
   }
 
   @include rwd(m) {
-    background-size: 100%;
     background-position: top -88px center;
+    background-size: 100%;
 
     &__wrapper {
       width: 40%;
@@ -107,19 +107,47 @@
 
     &__link {
       margin: 30px 0 50px;
+      padding: 10px 10px 10px 43px;
+
+      & .icon {
+        &--arrow {
+          left: 10px;
+        }
+      }
 
       &--bright {
-        color: #fff;
+        background-color: #fff;
+        color: $color-highlight;
       }
     }
   }
 
   @include rwd(xs) {
-    background-size: calc(100% + 150px);
-    background-position: top -60px left -150px;
+    background-position: top -60px left 0;
+    background-size: 100%;
+
+    &__container {
+      flex-direction: column;
+      padding-top: 320px;
+    }
 
     &__wrapper {
-      width: 55%;
+      width: 100%;
+
+      @include flex(column, flex-start, flex-start);
+    }
+
+    &__link {
+      align-self: flex-end;
+      margin: 20px 0;
+    }
+  }
+
+  @include rwd(xxs) {
+    background-position: top center;
+
+    &__container {
+      padding-top: 50vw;
     }
   }
 }
