--- a/src/scss/partials/footer/_contact-form.scss
+++ b/src/scss/partials/footer/_contact-form.scss
@@ -10,10 +10,10 @@
   }
 
   &__label {
+    position: relative;
     display: block;
     width: 100%;
     height: 36px;
-    position: relative;
     background-color: #fff;
 
     & + & {
@@ -22,23 +22,25 @@
 
     & .wpcf7-form-control-wrap {
       position: relative;
-      display: block;
       z-index: 2;
+      display: block;
       width: 100%;
       height: 100%;
 
-      & > input, & > textarea {
+      & > input,
+      & > textarea {
+        z-index: 2;
         width: 100%;
         height: 100%;
-        padding: 15px 15px 0;
-        z-index: 2;
         border: none;
+        padding: 15px 15px 0;
         background-color: transparent;
       }
     }
 
     &--textarea {
       height: 161px;
+
       #{$this}__placeholder {
         top: 15px;
 
@@ -52,16 +54,16 @@
   &__placeholder {
     position: absolute;
     top: 50%;
-    padding: 0 0 0 15px;
-    transform: translateY(-50%);
     z-index: 1;
-    font-size: $font-size-s;
+    padding: 0 0 0 15px;
     color: $color-lighter;
+    font-size: $font-size-s;
     transition: font-size $tr-s, right $tr-s, top $tr-s, left $tr-s, transform $tr-s;
+    transform: translateY(-50%);
 
     &--active {
-      font-size: $font-size-xs;
       top: 8px;
+      font-size: $font-size-xs;
     }
   }
 
@@ -90,16 +92,23 @@
     }
 
     &--failed {
-      border-color: #b01f1e !important;
-      color: #fff !important;
-      background-color: transparent !important;
-      padding: 10px !important;
+      border-color: $color-form-error!important;
+      padding: 10px!important;
+      background-color: transparent!important;
+      color: #fff!important;
+    }
+
+    &--sent {
+      border-color: $color-form-valid!important;
+    }
+
+    &--invalid {
+      border-color: $color-form-invalid!important;
     }
 
     &:disabled {
-      cursor: not-allowed;
       padding: 20px;
-      border-color: #b0f566;
+      cursor: not-allowed;
 
       &:hover {
         background-color: transparent;
@@ -121,20 +130,25 @@
     left: 0;
     width: 100%;
     height: 100%;
+    box-shadow: 0 0 3px 3px $color-form-invalid;
     color: transparent;
-    box-shadow: 0 0 3px 3px $color-highlight;
   }
 
-  .wpcf7-response-output, .ajax-loader { 
-    display: none !important;
+  .wpcf7-response-output,
+  .ajax-loader {
+    display: none!important;
   }
 
   @include rwd(xxs) {
     &__submit {
       width: 100%;
-      padding: 25px;
+      padding: 10px;
 
       @include flex(row, center, center);
+    }
+
+    .wpcf7-not-valid-tip {
+      box-shadow: 0 0 1px 2px $color-form-invalid;
     }
   }
 }
