--- a/src/scss/partials/landing/_team-section.scss
+++ b/src/scss/partials/landing/_team-section.scss
@@ -1,8 +1,9 @@
 .team-section {
   $this: &!default;
-  background-size: cover;
+
   background-position: center;
-  
+  background-size: cover;
+
   &__container {
     @include flex(column, center, center);
   }
@@ -36,9 +37,9 @@
         position: absolute;
         top: 50%;
         right: 62px;
+        transition: fill $tr;
         transform: translateY(-50%);
         fill: currentColor;
-        transition: fill $tr;
       }
     }
   }
@@ -46,30 +47,32 @@
   &__members {
     width: 810px;
     margin: 0 0 172px;
+
     @include flex(row, space-between, flex-start);
   }
 
   &__single-member {
     width: 383px;
     height: 383px;
+    background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
+
     @include flex(row, center, flex-end);
     @include shadow(10px, 20px, lighten($color-shadow, 50%));
 
     &-wrapper {
       position: relative;
-      display: block;
+      z-index: 1;
       width: 323px;
       height: 92px;
-      border-bottom: 2px solid $color-highlight;
       margin: 0 0 -60px;
+      border-bottom: 2px solid $color-highlight;
+      padding: 4px;
       background-color: #fff;
       text-align: center;
-      z-index: 1;
       transition: border-color $tr, color $tr;
-      
+
       @include flex(column, center, center);
       @include shadow(5px, 15px, lighten($color-shadow, 50%));
 
@@ -80,17 +83,17 @@
         right: 0;
         bottom: 0;
         left: 0;
+        z-index: 2;
+        opacity: 0;
         width: 100%;
         height: calc(100% + 2px);
         background-image: radial-gradient(circle at top right, #b26493, $color-highlight);
-        opacity: 0;
-        z-index: 2;
         transition: opacity $tr;
       }
 
       &:hover {
-        color: #fff;
         border-color: transparent;
+        color: #fff;
 
         &::after {
           opacity: 1;
@@ -104,20 +107,20 @@
 
     &-name {
       position: relative;
+      z-index: 3;
       font-size: 28px;
       font-family: $font-family-serif;
       line-height: 30px;
-      z-index: 3;
     }
 
     &-position {
       position: relative;
+      z-index: 3;
       color: $color-lighter;
       font-size: $font-size-s;
       line-height: 20px;
       text-transform: uppercase;
       transition: color $tr;
-      z-index: 3;
     }
   }
 
@@ -209,18 +212,25 @@
       height: 160px;
 
       &-wrapper {
-        height: 45px;
+        height: 55px;
         margin: 0 0 -25px;
       }
 
       &-name {
-        font-size: $font-size-base;
+        font-size: $font-size-mid;
         line-height: 1.4;
       }
 
       &-position {
         line-height: 1.4;
       }
+    }
+  }
+
+  @include rwd(360px) {
+    &__single-member {
+      width: 140px;
+      height: 140px;
     }
   }
 }
