--- a/src/scss/helpers/reset.scss
+++ b/src/scss/helpers/reset.scss
@@ -1,18 +1,20 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
 
 /*
-  slightly modified @kjhank: 
+  slightly modified @kjhank:
   * added `main` element
   * set box-sizing to border-box with inheritance
   * SASS-ed up
+  * blocked images
 */
 
 html {
   box-sizing: border-box;
 }
+
 *,
 *::before,
 *::after {
@@ -101,10 +103,10 @@ mark,
 audio,
 video {
   margin: 0;
-  padding: 0;
   border: 0;
-  font-size: 100%;
+  padding: 0;
   font: inherit;
+  font-size: 100%;
   vertical-align: baseline;
 }
 
@@ -139,10 +141,7 @@ ul[class] {
 blockquote,
 q {
   quotes: none;
-}
 
-blockquote,
-q {
   &::before,
   &::after {
     content: '';
@@ -151,8 +150,8 @@ q {
 }
 
 table {
-  border-collapse: collapse;
   border-spacing: 0;
+  border-collapse: collapse;
 }
 
 a {
@@ -180,9 +179,9 @@ select {
 
 @media (prefers-reduced-motion: reduce) {
   * {
-    animation-duration: 0.01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
-    scroll-behavior: auto !important;
+    transition-duration: 0.01ms!important;
+    animation-duration: 0.01ms!important;
+    animation-iteration-count: 1!important;
+    scroll-behavior: auto!important;
   }
 }
