--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -1,75 +1,53 @@
 .main-header {
   position: fixed;
-  z-index: 10;
   top: 0;
   right: 0;
   left: 0;
+  z-index: 10;
   width: 100%;
   height: 132px;
   background-color: #fff;
+
   @include flex(row, center, center);
 
   &__wrapper {
     position: relative;
+
     @include flex(row, space-between, center);
   }
 
   &__navigation {
     &-item {
       display: inline-block;
+      padding: 16px;
       font-weight: 700;
       font-size: $font-size-mid;
       text-decoration: none;
-      padding: 16px;
       text-transform: uppercase;
-
-    a {
-      position: relative;
-      display: block;
-
-      &::after {
-        content: '';
-        position: absolute;
-        width: 100%;
-        transform: scale(0, 1);
-        height: 2px;
-        bottom: 0;
-        left: 0;
-        background-color: $color-highlight;
-        transform-origin: bottom right;
-        transition: transform $tr;
-      }
-
-      &:hover {
-        &::after {
-          transform-origin: bottom left;
-          transform: scale(1);
-        }
-      }
-    }
 
       &--contact {
         position: relative;
         margin: 0 0 0 15px;
-        padding: 0;
         border: 1px solid $color-highlight;
+        padding: 0;
         color: $color-highlight;
         transition: color $tr, background-color $tr, border-color $tr;
 
         &:hover {
-          color: #fff;
           border-color: #fff;
           background-color: $color-highlight;
+          color: #fff;
         }
 
-        a {
+        & a {
           position: relative;
           width: 163px;
           height: 53px;
-          padding: 23px 30px;
-          display: inline-flex;
-          align-items: center;
-          justify-content: flex-start;
+          padding: 18px 30px;
+
+          @include flex(row, flex-start, center) {
+            display: inline-flex;
+          }
         }
 
         .icon {
@@ -77,10 +55,34 @@
             position: absolute;
             top: 50%;
             right: 28px;
+            transition: color $tr;
             transform: translateY(-50%);
             fill: currentColor;
+          }
+        }
+      }
 
-            transition: color $tr;
+      a {
+        position: relative;
+        display: block;
+
+        &::after {
+          content: '';
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          width: 100%;
+          height: 2px;
+          background-color: $color-highlight;
+          transition: transform $tr;
+          transform: scale(0, 1);
+          transform-origin: bottom right;
+        }
+
+        &:hover {
+          &::after {
+            transform: scale(1);
+            transform-origin: bottom left;
           }
         }
       }
@@ -89,11 +91,11 @@
         width: 20px;
         height: 20px;
         border: 1px solid $color-lighter;
-        font-size: $font-size-xs;
-        color: $color-lighter;
         padding: 0;
+        color: $color-lighter;
+        font-size: $font-size-xs;
         transition: color $tr, border-color $tr;
-        
+
         @include flex(row, center, center) {
           display: inline-flex;
         }
@@ -119,9 +121,10 @@
 
     &-toggle {
       display: none;
-      background-color: transparent;
       border: none;
+      padding: 0;
       outline: none;
+      background-color: transparent;
       color: $color-foreground;
       transition: transform $tr;
 
@@ -129,10 +132,15 @@
         color: $color-highlight;
         transform: rotate3d(0, 0, 1, 90deg);
       }
+
+      &:focus {
+        outline: none;
+      }
     }
   }
 
-  &__logo, &__url {
+  &__logo,
+  &__url {
     display: block;
   }
 
@@ -150,7 +158,7 @@
     width: 100%;
     height: 100%;
   }
-  
+
   @include rwd(m) {
     height: 88px;
 
@@ -161,6 +169,7 @@
 
       &-item {
         padding: 12px;
+        font-size: 12px;
 
         &--contact {
           margin: 0 0 0 10px;
@@ -168,7 +177,7 @@
 
           a {
             width: 120px;
-            padding: 25px 15px;
+            padding: 18px 15px;
           }
 
           & .icon {
@@ -191,12 +200,6 @@
       width: 260px;
       height: 67px;
     }
-
-    &__navigation {
-      &-item {
-        font-size: 12px;
-      }
-    }
   }
 
   @include rwd(xs) {
@@ -212,31 +215,33 @@
         position: fixed;
         top: 88px;
         right: 0;
+        opacity: 0;
+        flex-direction: column;
         width: percentage(1/3);
         height: auto;
-        opacity: 0;
         padding: 0 50px 50px;
-        flex-direction: column;
         background-color: #fff;
         transition: transform $tr, opacity $tr;
         transform: translate3d(100%, 0, 0);
 
-        @supports(backdrop-filter: blur(5px)) {
+        @supports (backdrop-filter: blur(5px)) {
           background-color: transparent;
+
           @include gradient(vertical, #fff, rgba(#fff, 0.6));
+
           backdrop-filter: blur(5px);
         }
 
         &--visible {
-          transform: translate3d(0, 0, 0);
           opacity: 1;
+          transform: translate3d(0, 0, 0);
         }
       }
 
       &-item {
         padding: 0;
-        font-size: $font-size-l;
         font-weight: 400;
+        font-size: $font-size-l;
 
         & a {
           padding: 25px;
@@ -248,6 +253,7 @@
 
           & a {
             width: unset;
+            padding: 12px;
           }
         }
       }
@@ -270,8 +276,8 @@
         transform: translate3d(0, -120%, 0);
 
         &--visible {
-          transform: translate3d(0, 0, 0);
           opacity: 1;
+          transform: translate3d(0, 0, 0);
         }
       }
 
@@ -282,7 +288,7 @@
         z-index: 15;
       }
 
-      &-item{
+      &-item {
         &--contact {
           a {
             display: block;
