--- a/src/scss/partials/footer/_footer.scss
+++ b/src/scss/partials/footer/_footer.scss
@@ -1,18 +1,20 @@
 @import './contact-form';
 
 .main-footer {
-  background-image: radial-gradient(
-    ellipse at 50% 25%,
-    rgba($color-gradient-end, 0.93),
-    rgba($color-gradient-start, 0.93)
-  );
+  background-image:
+    radial-gradient(
+      ellipse at 50% 25%,
+      rgba($color-gradient-end, 0.93),
+      rgba($color-gradient-start, 0.93)
+    );
 
   &--landing {
-    background-image: radial-gradient(
-      ellipse at 50% 25%,
-      darken($color-gradient-end, 7%),
-      darken($color-gradient-start, 7%)
-    );
+    background-image:
+      radial-gradient(
+        ellipse at 50% 25%,
+        darken($color-gradient-end, 7%),
+        darken($color-gradient-start, 7%)
+      );
   }
 
   &__container {
@@ -52,13 +54,12 @@
     z-index: 2;
     width: 100%;
     height: 216px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #fff;
-    padding: 0 85px 0 52px;
-    border-bottom: 2px solid $color-highlight;
     margin: 0 0 -113px;
+    border-bottom: 2px solid $color-highlight;
+    padding: 0 85px 0 52px;
+    background-color: #fff;
+
+    @include flex(row, space-between, center);
     @include shadow(0, 40px, lighten($color-shadow, 25%));
   }
 
@@ -91,6 +92,7 @@
 
       a {
         transition: color $tr;
+
         &:hover {
           color: $color-highlight;
         }
@@ -110,11 +112,11 @@
 
   &__copyright {
     width: 100%;
+    padding: 25px 0;
     background-color: #fff;
-    text-align: center;
     color: $color-copyright;
     font-size: $font-size-s;
-    padding: 25px 0;
+    text-align: center;
   }
 
   & .main-logo {
@@ -127,7 +129,7 @@
 
   @include rwd(m) {
     &__brow {
-      margin: 60px 0 20px
+      margin: 60px 0 20px;
     }
 
     &__heading {
@@ -152,8 +154,8 @@
     }
 
     &__info {
-      height: 144px;
       justify-content: space-around;
+      height: 144px;
       margin: 0 0 -72px;
       padding: 0;
     }
@@ -188,6 +190,10 @@
     &__contact {
       &-item {
         padding: 0 10px;
+      }
+
+      &-form {
+        margin: 93px 0 20px;
       }
     }
 
@@ -233,7 +239,7 @@
 
         & + & {
           border: none;
-          
+
           &::after {
             content: '';
             position: absolute;
@@ -241,8 +247,8 @@
             left: 50%;
             width: 50%;
             height: 1px;
-            transform: translateX(-50%);
             background-color: $color-gray-c7;
+            transform: translateX(-50%);
           }
         }
       }
