--- a/src/scss/partials/landing/_services-section.scss
+++ b/src/scss/partials/landing/_services-section.scss
@@ -120,6 +120,20 @@
     }
   }
 
+  @include rwd(l) {
+    &__brow {
+      padding: 25px 0 15px;
+    }
+
+    &__line {
+      margin: 15px 0;
+    }
+
+    &__services {
+      margin: 30px 0 150px;
+    }
+  }
+
   @include rwd(m) {
     padding: 110px 0 0;
 
