--- a/src/scss/layout/_content.scss
+++ b/src/scss/layout/_content.scss
@@ -1,5 +1,8 @@
 .main-content {
   padding: 132px 0 0;
+  background-position: top center;
+  background-size: auto;
+  background-repeat: no-repeat;
   color: $color-foreground;
 
   @include rwd(m) {
