--- a/src/scss/partials/footer/_footer.scss
+++ b/src/scss/partials/footer/_footer.scss
@@ -31,12 +31,71 @@
   }
 
   &__line {
-    margin: 25px 0 50px;
+    margin: 25px 0 25px;
   }
 
   &__heading {
     font-size: $font-size-heading;
     font-family: $font-family-serif;
+  }
+
+  &__subheading {
+    font-size: $font-size-heading * 0.75;
+    font-family: $font-family-serif;
+  }
+
+  &__contact-info {
+    @include flex(row, space-between, flex-start, wrap);
+
+    &-item {
+      flex: 1 1 50%;
+
+      &:nth-child(n+3) {
+        margin: 25px 0 0;
+      }
+
+      &:last-of-type {
+        align-self: flex-end;
+      }
+
+      strong {
+        font-weight: 600;
+      }
+    }
+
+    &-heading {
+      padding: 0 0 10px;
+      font-size: $font-size-l;
+      font-family: $font-family-serif;
+    }
+
+    &-content {
+      font-size: $font-size-base;
+
+      a {
+        position: relative;
+
+        &::after {
+          content: '';
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          width: 100%;
+          height: 2px;
+          background-color: $color-highlight;
+          transition: transform $tr;
+          transform: scale(0, 1);
+          transform-origin: bottom right;
+        }
+
+        &:hover {
+          &::after {
+            transform: scale(1);
+            transform-origin: bottom left;
+          }
+        }
+      }
+    }
   }
 
   &__paragraph {
@@ -158,7 +217,7 @@
 
     &__contact-form {
       width: 42%;
-      margin: 93px 0 70px;
+      margin: 93px 0 35px;
     }
 
     &__info {
