Popup support & slight visual tweaks

--- a/src/scss/pages/_landing.scss
+++ b/src/scss/pages/_landing.scss
@@ -2,3 +2,4 @@
 @import '../partials/landing/hero-sub';
 @import '../partials/landing/services-section';
 @import '../partials/landing/team-section';
+@import '../partials/landing/popup';
