--- a/src/scss/layout/_content.scss
+++ b/src/scss/layout/_content.scss
@@ -5,7 +5,7 @@
   background-repeat: no-repeat;
   color: $color-foreground;
 
-  @include rwd(m) {
+  @include rwd(l) {
     padding: 88px 0 0;
   }
 }
