--- a/src/scss/partials/footer/_footer.scss
+++ b/src/scss/partials/footer/_footer.scss
@@ -18,6 +18,8 @@
   }
 
   &__container {
+    padding-top: 60px;
+
     @include flex(row, space-between, flex-start, wrap);
   }
 
@@ -27,7 +29,7 @@
   }
 
   &__brow {
-    margin: 90px 0 30px;
+    padding: 30px 0;
   }
 
   &__line {
@@ -105,7 +107,7 @@
 
   &__contact-form {
     width: 510px;
-    margin: 140px 0 110px;
+    margin: 50px 0 110px;
   }
 
   &__info {
@@ -135,9 +137,7 @@
   }
 
   &__contact {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flex(row, center, flex-start);
 
     &-item {
       padding: 0 45px;
@@ -196,7 +196,7 @@
 
   @include rwd(m) {
     &__brow {
-      margin: 60px 0 20px;
+      margin: 0;
     }
 
     &__heading {
@@ -217,7 +217,7 @@
 
     &__contact-form {
       width: 42%;
-      margin: 93px 0 35px;
+      margin: 40px 0 35px;
     }
 
     &__info {
@@ -232,8 +232,13 @@
         padding: 0 30px;
       }
 
-      &-heading {
+      &-heading,
+      &-info-heading {
         font-size: 16px;
+      }
+
+      &-info-content {
+        font-size: 14px;
       }
 
       &-content {
@@ -253,6 +258,25 @@
     }
   }
 
+  @include rwd(s) {
+    &__wrapper {
+      width: 58%;
+    }
+
+    &__brow {
+      margin: 0;
+      padding: 0 0 10px;
+    }
+
+    &__line {
+      margin: 15px 0;
+    }
+
+    &__subheading {
+      font-size: $font-size-heading * 3/5;
+    }
+  }
+
   @include rwd(xs) {
     &__contact {
       &-item {
@@ -260,7 +284,7 @@
       }
 
       &-form {
-        margin: 93px 0 20px;
+        margin: 0 0 20px;
       }
     }
 
